tensorflow/1.10/api_docs/python/tf/contrib/gan/losses.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.contrib.gan.losses" />
</div>

# Module: tf.contrib.gan.losses



Defined in [`tensorflow/contrib/gan/python/losses/__init__.py`](https://www.tensorflow.org/code/tensorflow/contrib/gan/python/losses/__init__.py).

TFGAN losses and penalties.

Losses can be used with individual arguments or with GANModel tuples.

## Modules

[`wargs`](../../../tf/contrib/gan/losses/wargs.md) module: TFGAN grouped API. Please see README.md for details and usage.

## Functions

[`acgan_discriminator_loss(...)`](../../../tf/contrib/gan/losses/acgan_discriminator_loss.md)

[`acgan_generator_loss(...)`](../../../tf/contrib/gan/losses/acgan_generator_loss.md)

[`combine_adversarial_loss(...)`](../../../tf/contrib/gan/losses/combine_adversarial_loss.md): Combine adversarial loss and main loss.

[`cycle_consistency_loss(...)`](../../../tf/contrib/gan/losses/cycle_consistency_loss.md): Defines the cycle consistency loss.

[`least_squares_discriminator_loss(...)`](../../../tf/contrib/gan/losses/least_squares_discriminator_loss.md)

[`least_squares_generator_loss(...)`](../../../tf/contrib/gan/losses/least_squares_generator_loss.md)

[`minimax_discriminator_loss(...)`](../../../tf/contrib/gan/losses/minimax_discriminator_loss.md)

[`minimax_generator_loss(...)`](../../../tf/contrib/gan/losses/minimax_generator_loss.md)

[`modified_discriminator_loss(...)`](../../../tf/contrib/gan/losses/modified_discriminator_loss.md)

[`modified_generator_loss(...)`](../../../tf/contrib/gan/losses/modified_generator_loss.md)

[`mutual_information_penalty(...)`](../../../tf/contrib/gan/losses/mutual_information_penalty.md)

[`wasserstein_discriminator_loss(...)`](../../../tf/contrib/gan/losses/wasserstein_discriminator_loss.md)

[`wasserstein_generator_loss(...)`](../../../tf/contrib/gan/losses/wasserstein_generator_loss.md)

[`wasserstein_gradient_penalty(...)`](../../../tf/contrib/gan/losses/wasserstein_gradient_penalty.md)

